--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4902,4 +4902,13 @@
 
     <!-- Text to display in regulatory info screen (from device overlay). -->
     <string name="regulatory_info_text"></string>
+
+    <!-- ThunderKat strings -->
+
+    <!-- Categories -->
+    <string name="display_thunderkat_title">ThunderKat customizations</string>
+
+    <!--- Lock clock -->
+    <string name="lock_clock_title">cLock widget</string>
+    <string name="lock_clock_summary">View or change how the cLock Home and Lock screen widgets will display</string>
 </resources>
