- Go to Applications Settings instead of directly jumping to Manage Applications - Enable AppOps via Application Settings - Enable Quick Launch keyboard shortcut settings via Application Settings

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4951,4 +4951,8 @@
 
     <!-- Battery preferences -->
     <string name="status_bar_battery_percent">Enable status bar battery percent</string>
+
+    <!-- App Ops -->
+    <string name="app_ops_title">App Ops</string>
+    <string name="app_ops_summary">Fine-grained application permission controls</string>
 </resources>
