--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4955,4 +4955,8 @@
     <!-- App Ops -->
     <string name="app_ops_title">App Ops</string>
     <string name="app_ops_summary">Fine-grained application permission controls</string>
+
+    <!-- Back long-press kill -->
+    <string name="kill_app_longpress_back">Kill app back button</string>
+    <string name="kill_app_longpress_back_summary">Kill the foreground app by long-pressing the back key</string>
 </resources>
