--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4975,4 +4975,8 @@
 
     <!-- Device hostname editor -->
     <string name="device_hostname">Device hostname</string>
+
+    <!-- ART runtime -->
+    <string name="art_runtime_warning_title">Warning</string>
+    <string name="art_runtime_warning_message">ART is not supported by ThunderKat. This setting is included for experimentation only and has the potential to cause instability, crashes, data loss or prevent the proper boot of your device. Visit &lt;a href=\"http://source.android.com/devices/tech/dalvik/art.html\"&gt;Introducing ART&lt;/a&gt; for more information.&lt;br/&gt;&lt;br/&gt;If you have enabled ART as your runtime, please do not expect support for any issues.&lt;br/&gt;&lt;br/&gt;Are you sure you want to reboot to change runtime from <xliff:g id="old" example="libdvm.so">%1$s</xliff:g> to <xliff:g id="new" example="libart.so">%2$s</xliff:g>?</string>
 </resources>
