Allow user to trigger volume media rescan from storage settinsg This only works for the following types of volumes: - Internal emulated volumes - Primary volumes - Non-Removable volumes

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4979,4 +4979,8 @@
     <!-- ART runtime -->
     <string name="art_runtime_warning_title">Warning</string>
     <string name="art_runtime_warning_message">ART is not supported by ThunderKat. This setting is included for experimentation only and has the potential to cause instability, crashes, data loss or prevent the proper boot of your device. Visit &lt;a href=\"http://source.android.com/devices/tech/dalvik/art.html\"&gt;Introducing ART&lt;/a&gt; for more information.&lt;br/&gt;&lt;br/&gt;If you have enabled ART as your runtime, please do not expect support for any issues.&lt;br/&gt;&lt;br/&gt;Are you sure you want to reboot to change runtime from <xliff:g id="old" example="libdvm.so">%1$s</xliff:g> to <xliff:g id="new" example="libart.so">%2$s</xliff:g>?</string>
+
+    <!-- Rescan media volume -->
+    <string name="storage_rescan_media">Rescan media for the storage volume</string>
+    <string name="storage_rescan_media_complete">Scan completed</string>
 </resources>
